Fixed spacing in cart

--- a/CSS/cart.css
+++ b/CSS/cart.css
@@ -27,7 +27,6 @@
     align-items: center;
     justify-content: center; 
     border-bottom: 1px;
-    margin-bottom: 1em;
     width: 80%;
 }
 
